alpm-pkginfo/tests/snapshots/integration__format_pkginfo_and_serialize_as_json::case_1_pkginfov1_as_json.snap
---
source: alpm-pkginfo/tests/integration.rs
expression: pkg_info.to_string()
snapshot_kind: text
---
{
  "pkgname": "example",
  "pkgbase": "example",
  "pkgver": "1:1.0.0-1",
  "pkgdesc": "A project that does something",
  "url": "https://example.org/",
  "builddate": "1729181726",
  "packager": "John Doe <john@example.org>",
  "size": "181849963",
  "arch": "any",
  "license": [
    "GPL-3.0-or-later",
    "LGPL-3.0-or-later"
  ],
  "replaces": [
    "other-package>0.9.0-3"
  ],
  "group": [
    "package-group",
    "other-package-group"
  ],
  "conflict": [
    "conflicting-package<1.0.0",
    "other-conflicting-package<1.0.0"
  ],
  "provides": [
    "some-component",
    "some-other-component=1:1.0.0-1"
  ],
  "backup": [
    "etc/example/config.toml",
    "etc/example/other-config.txt"
  ],
  "depend": [
    "glibc",
    "gcc-libs"
  ],
  "optdepend": [
    "python: for special-python-script.py",
    "ruby: for special-ruby-script.rb"
  ],
  "makedepend": [
    "cmake",
    "python-sphinx"
  ],
  "checkdepend": [
    "extra-test-tool",
    "other-extra-test-tool"
  ]
}
